--- a/pom.xml
+++ b/pom.xml
@@ -68,6 +68,7 @@ limitations under the License.
     <commons-logging.version>1.1.3</commons-logging.version>
     <elasticsearch-java-driver.version>2.3.2</elasticsearch-java-driver.version>
     <elasticsearch5-java-driver.version>5.5.2</elasticsearch5-java-driver.version>
+    <elasticsearch6.version>6.2.4</elasticsearch6.version>
     <esri-geometry-api.version>2.0.0</esri-geometry-api.version>
     <findbugs.version>3.0.1</findbugs.version>
     <fmpp-maven-plugin.version>1.0</fmpp-maven-plugin.version>
@@ -151,6 +152,7 @@ limitations under the License.
     <module>druid</module>
     <module>elasticsearch2</module>
     <module>elasticsearch5</module>
+    <module>elasticsearch6</module>
     <module>example</module>
     <module>file</module>
     <module>geode</module>
